--- a/assets/style.css
+++ b/assets/style.css
@@ -10,9 +10,13 @@ header {
   justify-content: space-between;
 }
 
+header h1 {
+  padding: 0 0 0 20px;
+}
+
 header a {
   text-decoration: none;
-  color: #fce138;
+  color: white;
 }
 
 header nav {
@@ -30,6 +34,8 @@ header nav ul {
 header nav ul li a {
   padding: 10px 15px;
   font-weight: lighter;
-  font-size: 1.55vw;
-  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+#hero {
+  ;
 }
