--- a/assets/style.css
+++ b/assets/style.css
@@ -10,9 +10,9 @@ body {
 header {
   background-image: url(/assets/images/star-wars-backgrounds-25.jpg);
   display: flex;
-  background-color: green;
   align-items: center;
   justify-content: space-between;
+  background-color: black;
 }
 
 header h1 {
@@ -45,6 +45,11 @@ header nav ul li a {
   display: flex;
 }
 
+header nav ul li a:hover {
+  background-color: white;
+  color: black;
+}
+
 #hero {
   display: flex;
   background-image: url("./images/DSC_0516.jpg");
@@ -53,8 +58,8 @@ header nav ul li a {
   background-repeat: no-repeat;
   background-color: black;
   margin: 0;
-  display: flex;
   height: 500px;
+  width: 100%;
   position: relative;
 }
 
@@ -69,6 +74,8 @@ header nav ul li a {
 }
 
 section {
+  display: flex;
+  flex: wrap;
   padding: 60px 0;
 }
 
@@ -110,11 +117,54 @@ section {
   margin: 0 auto 35px auto;
   width: 50%;
   font-weight: lighter;
-  padding: 0 25px 0 10px;
+  padding: 0 100px 0 10px;
   color: darkgray;
   text-shadow: 2px 2px black;
 }
 
 #contact ul li a:hover {
   color: red;
+}
+
+@media screen and (max-width: 980px) {
+ #hero {
+  height: 50px;
+  width: 100%;
+ }
+
+ #hero h2 {
+   font-size: 2.3vw;
+   color: white;
+ }
+
+ section {
+   width: 100%;
+   height: 20%;
+ }
+
+ .titles {
+   font-size: inherit;
+   border: 0;
+ }
+
+ p {
+  font-size: 2.6vw;
+ }
+
+ .text {
+   display: flex;
+   flex-wrap: wrap;
+   width: 100%;
+ }
+
+ .text ul {
+   display: flex;
+   flex-wrap: wrap;
+ }
+
+ .text ul li a {
+   margin: 0;
+   padding: 0;
+   font-size: 5px;
+ }
 }
