--- a/assets/style.css
+++ b/assets/style.css
@@ -77,6 +77,7 @@ section {
   display: flex;
   flex: wrap;
   padding: 60px 0;
+  width: 85%;
 }
 
 .container {
@@ -85,6 +86,7 @@ section {
   width: 95%;
   height: 100px;
   margin: 0 auto;
+  padding: 10px 0 0 0;
 }
 
 .titles {
@@ -97,7 +99,7 @@ section {
 }
 
 .text {
-  padding: 0 0 0 20px;
+  padding: 10px 0 0 20px;
 }
 
 #contact ul {
@@ -138,8 +140,8 @@ section {
  }
 
  section {
-   width: 100%;
-   height: 20%;
+   width: 90%;
+   height: 30%;
  }
 
  .titles {
@@ -154,7 +156,9 @@ section {
  .text {
    display: flex;
    flex-wrap: wrap;
-   width: 100%;
+   width: 80%;
+   height: 100%;
+   margin: 0;
  }
 
  .text ul {
@@ -164,7 +168,11 @@ section {
 
  .text ul li a {
    margin: 0;
-   padding: 0;
+   padding: 20px 0;
    font-size: 5px;
+ }
+
+ #work {
+  display: none;
  }
 }
