--- a/assets/style.css
+++ b/assets/style.css
@@ -1,178 +1,260 @@
 * {
-  font-style: normal;
-  font-weight: bold;
-}
-
-body {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
+body,
+html {
+  font-size: 20px;
+  background-color: rgb(255, 246, 246);
+}
+section {
+  padding: 60px 0;
+}
+
+/*------header-----*/
 header {
-  background-image: url(/assets/images/star-wars-backgrounds-25.jpg);
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
   background-color: black;
 }
 
-header h1 {
+.nav-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 95%;
+  padding: 20px 0;
+}
+
+.nav-container h1 {
   padding: 0 0 0 20px;
-  color: grey;
-  text-shadow: 2px 2px white;
+  color: #fff;
+  text-shadow: 1px 1px rgb(212, 210, 210);
 }
 
-header a {
-  text-decoration: none;
-  color: white;
-}
-
-header nav {
-  height: 50px;
-  margin: 7px 0;
-}
-
-header nav ul {
+.nav-container nav ul {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  align-items: center;
   list-style: none;
 }
 
-header nav ul li a {
+.nav-container ul li a {
   padding: 5px 15px;
   font-weight: lighter;
-  display: flex;
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
 }
 
 header nav ul li a:hover {
   background-color: white;
   color: black;
 }
-
+/*------hero section-------*/
 #hero {
-  display: flex;
-  background-image: url("./images/DSC_0516.jpg");
+  background-image: linear-gradient(
+      rgba(85, 85, 85, 0.6),
+      rgba(85, 85, 85, 0.6)
+    ),
+    url('./images/DSC_0516 (1).jpg');
   background-position: center;
-  background-size: 70%;
+  background-size: cover;
   background-repeat: no-repeat;
-  background-color: black;
-  margin: 0;
-  height: 500px;
-  width: 100%;
+  height: 90vh;
   position: relative;
 }
 
 #hero h2 {
-  display: flex;
-  color: grey;
+  color: #fff;
   margin: 0;
   font-size: x-large;
   position: absolute;
-  bottom: 0;
-  right: 0;
+  padding: 20px;
+  bottom: 60px;
+  right: 60px;
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
-section {
-  display: flex;
-  flex: wrap;
-  padding: 60px 0;
-  width: 85%;
-}
-
-.container {
+/*-----about me section---------*/
+.about-me-box {
   display: flex;
   align-items: center;
-  width: 95%;
-  height: 100px;
+  width: 70%;
   margin: 0 auto;
-  padding: 10px 0 0 0;
 }
 
 .titles {
-  display: flex;
-  flex: 1 25%;
-  border-right: 10px solid grey;
+  border-right: 6px solid grey;
+  height: 30vh;
   font-size: 35px;
   padding: 0 20px;
   text-align: center;
 }
 
 .text {
-  padding: 10px 0 0 20px;
+  padding: 0 0 0 20px;
+}
+.flex-box {
+  display: flex;
+  justify-content: space-between;
+  width: 78%;
+  margin: 0 auto;
 }
 
-#contact ul {
+/*-------work section--------*/
+.work-section {
+  height: 60vh;
+}
+.grid-container {
+  display: flex;
+  grid-gap: 30px;
+  width: 80%;
+  margin: 0 auto;
+  justify-content: space-between;
+}
+.grid-header {
+  width: 20%;
+}
+
+.grid-header h2 {
+  border-right: 6px solid grey;
+  height: 80vh;
+  margin-right: 30px;
+  font-size: 35px;
+  margin-top: 0;
+}
+.main-grid {
+  display: grid;
+  grid-template-columns: repeat(6, 0.6fr);
+  grid-template-rows: repeat(3, 0.28fr);
+  gap: 10px;
+  grid-auto-flow: dense;
+  width: 80%;
+}
+.work-item {
+  position: relative;
+  overflow: hidden;
+}
+.work-item img {
+  width: 100%;
+  height: 100%;
+}
+.work-item-1 {
+  grid-column: 1 / span 4;
+  grid-row: 1 / span 2;
+}
+
+.work-item-2 {
+  grid-column: 5 / span 2;
+  grid-row: 1;
+}
+.work-item-3 {
+  grid-column: 5 / span 2;
+  grid-row: 2;
+}
+.work-item-4 {
+  grid-column: 1 / span 2;
+  grid-row: 3;
+}
+.work-item-5 {
+  grid-column: 3 / span 2;
+  grid-row: 3;
+}
+
+.work-item div {
+  position: absolute;
+  bottom: 10px;
+  z-index: 9999;
+  padding: 0 5px;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+.work-item div h3,
+.work-item div p {
+  color: #fff;
+}
+.work-item h3 {
+  font-size: 110%;
+  color: #080808;
+}
+.work-item img {
+  opacity: 1;
+}
+.work-item img:hover {
+  opacity: 0.7;
+}
+/*-------footer--------*/
+footer {
+  padding: 10px 0;
+  background-color: #333;
+}
+.container {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin: 0 auto;
+}
+.container h2 {
+  color: #fff;
+  border-right: 6px solid grey;
+  height: 8vh;
+  margin-left: 20%;
+  font-size: 35px;
+  padding-right: 20px;
+  width: 70%;
+}
+.footer-nav {
+  margin-right: 20%;
+  width: 30%;
+}
+.footer-nav ul {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-#contact ul li {
+.footer-nav ul li {
   list-style: none;
 }
 
-#contact ul li a {
+.footer-nav ul li a {
   display: flex;
-  font-size: 30px;
   text-align: center;
   margin: 0 auto 35px auto;
   width: 50%;
   font-weight: lighter;
-  padding: 0 100px 0 10px;
-  color: darkgray;
-  text-shadow: 2px 2px black;
+  padding: 0 50px 0 10px;
+  margin-left: 10px;
+  color: #fff;
+  text-decoration: none;
+  font-size: 1.5vw;
 }
 
-#contact ul li a:hover {
-  color: red;
+.footer-nav ul li a:hover {
+  color: grey;
 }
 
-@media screen and (max-width: 980px) {
- #hero {
-  height: 50px;
-  width: 100%;
- }
+.text ul li a {
+  margin: 0;
+  padding: 0;
+}
 
- #hero h2 {
-   font-size: 2.3vw;
-   color: white;
- }
+@media screen and (max-width: 1023px) {
+  body {
+    font-size: 18px;
+  }
+  .nav-container ul li a {
+    display: block;
+    margin-bottom: 10px;
+  }
+}
 
- section {
-   width: 90%;
-   height: 30%;
- }
-
- .titles {
-   font-size: inherit;
-   border: 0;
- }
-
- p {
-  font-size: 2.6vw;
- }
-
- .text {
-   display: flex;
-   flex-wrap: wrap;
-   width: 80%;
-   height: 100%;
-   margin: 0;
- }
-
- .text ul {
-   display: flex;
-   flex-wrap: wrap;
- }
-
- .text ul li a {
-   margin: 0;
-   padding: 20px 0;
-   font-size: 5px;
- }
-
- #work {
-  display: none;
- }
+@media screen and (max-width: 768px) {
+  .footer-nav ul li a {
+    padding: 0 20px 0 10px;
+  }
+  .grid-header h2 {
+    height: 60vh;
+  
+  }
 }
